titles en.yml jiras

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -317,6 +317,7 @@ en:
   #User Login Forms
   username: "Username"
   sign_up: "Sign up"
+  sign_in: Login
   submit_buton: "Submit"
   clear_button: "Clear"
   password: "Password"
