--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -206,7 +206,10 @@ en:
   sidelinks_read: Read
   sidelinks_detail: Details
   sidelinks_add_collection: Add to Collection
-  sidelinks_views: view
+  sidelinks_views: 
+    zero: views
+    one: "1 view"
+    other: "%{count} view"
   listresult_author_by: "By:" 
   listresult_subject: "Genre:" 
   listresult_names: "Names:" 
@@ -228,7 +231,10 @@ en:
   book_details_details: Details
   book_details_average_rate: Average Rate
   book_details_user_rate: Your Rate
-  book_details_star: star
+  book_details_star: 
+    zero: ""
+    one: '%{count} star'
+    other: '%{count} stars'
   books_details_add_collection: Add to Collection
   book_details_collection_count:
     one:   "Collections"
@@ -494,7 +500,9 @@ ar:
   contact_us_message: 'شكرا لك على رسالتك'
   contact_us_title: 'اتصل بنا'
   invalid_email_address: 'عنوان البريد الإلكتروني غير صحيح'
-  
+  errors:
+    messages:
+      extension_white_list_error: 'Types allowed are: jpeg jpg gif bmp png'
  
   notifier:
     user_verification:
@@ -642,7 +650,10 @@ ar:
   sidelinks_read: 'قراءة'
   sidelinks_detail: 'تفاصيل'
   sidelinks_add_collection: 'إضافة إلى المجموعة'
-  sidelinks_views: 'عرض'
+  sidelinks_views:
+    one: "عرض 1"
+    two: "عرضان"
+    other: '%{count} عروض'
   listresult_author_by: "من خلال:"
   listresult_subject: "النوع:"
   listresult_names: "أسماء:" 
@@ -664,7 +675,11 @@ ar:
   book_details_details: 'تفاصيل'
   book_details_average_rate: 'متوسط ​​قيم'
   book_details_user_rate: 'تقييم لديك'
-  book_details_star: 'نجمة'
+  book_details_star: 
+    zero: ""
+    one: 'نجمة'
+    two: "نجمتان"
+    other: " %{count} نجوم"    
   books_details_add_collection: 'إضافة إلى المجموعة'
   book_details_collection_count:
     one:   "مجموعات"
