--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -450,14 +450,17 @@ ar:
   written_by_authors: 
     zero:  "بأي حال من الكتاب"
     one:   "من خلال مؤلف واحد"
+    two:
     other: "الكتاب %{count} بواسطة"
   written_in_languages: 
     zero:  "في أي لغات"
     one:   "في لغة واحدة"
+    two:   "في لغتين "
     other: "لغات %{count} في"
   containing_names: 
     zero:  "لا تحتوي على أسماء"
     one:   "تحتوي على اسم واحد"
+    two:   "تحتوي على اسمين"
     other: "أسماء علمية %{count} تحتوي على" 
   around_the_world: "حول العالم"
   tagged_species_caps: "الأنواع الموسومة"
@@ -528,6 +531,7 @@ ar:
       template:
         header:
           one: "خطأ التحقق من صحة %{count} وجدت"
+          two:"خطأن التحقق من صحة %{count} وجدت"
           other: "أخطاء التحقق من صحة %{count} العثور على"
         body: ":فشل التحقق من صحة الحقول التالية"
       messages:
@@ -539,10 +543,12 @@ ar:
         empty: "لا يمكن أن تكون فارغة"
         blank: "لا يمكن أن تكون فارغة"
         too_long:
-          one: "حرف (%{count}  هو طويل جدا (الحد الأقصى هو"
-          other: "حرف (%{count} هو طويل جدا (الحد الأقصى هو"
+          one: " (حرف %{count}  هو طويل جدا (الحد الأقصى هو"
+          two: "   حرفين هو طويل جدا (الحد الأقصى هو"
+          other: " (حروف %{count} هو طويل جدا (الحد الأقصى هو"
         too_short:
           one: "حرف (%{count} هو قصيرة جدا (الحد الأقصى هو"
+          two:  "   حرفين هو طويل جدا (الحد الأقصى هو"
           other: "حرف (%{count} هو قصيرة جدا (الحد الأقصى هو"
           
         wrong_length: "حرف (%{count} هو طول خاطئة (يجب أن تكون"
@@ -646,6 +652,7 @@ ar:
   name_found_in_books:
     zero:  ""
     one:   "وجدت في كتاب واحد"
+    two:    " وجدت في كتابين"
     other: "كتاب %{count} وجدت في"
   sidelinks_read: 'قراءة'
   sidelinks_detail: 'تفاصيل'
@@ -682,7 +689,8 @@ ar:
     other: " %{count} نجوم"    
   books_details_add_collection: 'إضافة إلى المجموعة'
   book_details_collection_count:
-    one:   "مجموعات"
+    one:   "مجموعة"
+    two:   "مجموعتان"
     other: "مجموعات"
   book_details_found_collections: 'وجدت في مجموعات'
   book_details_user_viewed: 'معروض للمستخدم أيضا'
@@ -737,7 +745,8 @@ ar:
   collections_found:
     zero:  ""
     one:   "وجدت في مجموعة واحدة"
-    other: " مجموعات%{count} وجدت في"
+    two:   " وجدت في مجموعتان"
+    other: " مجموعات %{count} وجدت في"
   collections_found_all: " مجموعات%{count} وجدت"
   collection_by: "من خلال:"
   collection_creation_date: "تم إنشاء في:"
@@ -878,6 +887,7 @@ ar:
   books_found:
     zero:  ""
     one:   "وجدت في كتاب واحد"
+    two: "وجدت في كتابين"
     other: "كتاب %{count} وجدت في"
   books_found_all: كتاب %{count} وجدت "
   
