--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -501,7 +501,9 @@ en:
   
   # browse page
   no_entity_found: "No %{entity} Found"
-    
+  
+  # saved queries
+  ALL: All Categories    
    
   #languages
   english: English
