fix arabic translations

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -61,12 +61,7 @@ ar:
       message: " مصر وشكرًا للتسجيل! BHL مرحبًا بك في "
     user_recover_account:
       subject: "الخاص بك BHLاستعِد حساب "
-      message: "تلقى نظام BHL طلبًا لاستعادة حسابك. إذا لم تكن قد قدمت هذا الطلب، يرجى تجاهل هذا البريد الإلكتروني.
-<br><br>
-Your username is: <b>%{@username}</b><br><br>
-يسمح الرابط التالي بالدخول مرة واحدة لتغير اسم المرور الخاص بك:
-password:<<br><br>%{reset_password_url}"
-
+      message: " .طلبًا لاستعادة حسابك . إذا لم تكن قد قدمت هذا الطلب، يرجى تجاهل هذا البريد الإلكتروني.  يسمح الرابط التالي بالدخول مرة واحدة لتغير اسم المرور الخاص بك"
 
   date:
     formats:
