--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -447,6 +447,7 @@ en:
   # login page
   captcha_error: "There is a validation error on login verification element"
   empty_user_name_error: User name can't be empty
+  empty_email_error: Email can't be empty
   empty_password_error: Password can't be empty
   empty_verfication_error: Please fill this
 
