--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -530,6 +530,11 @@ en:
   bibalex: "Bibliotheca Alexandrina"
   ba_logo: "balogo-white.svg"
   
+  will_paginate:
+    previous_label: "&#8592; Previous"
+    next_label: "Next &#8594;"
+    page_gap: "&hellip;"
+  
    
   #languages
   english: English
